--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-@import './normalize.css';
+@import url('./normalize.css');
+@import url('./media.css');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Orelega+One&display=swap');
 
@@ -234,16 +235,50 @@ body{
     font-family: Nunito;
     display: inline-flex;
     align-items: flex-start;
-    gap: 2.75rem;
     text-decoration: underline 1px rgba(244, 118, 118, 0.50);
     text-underline-offset: 12px;
     margin-bottom: 4.5rem;
+    gap: 2.75rem;
 }
 
 .main-menu__item.active{
     text-decoration: underline 3px #F47676;
     
 }
+.main-menu__item{
+    display: flex;
+    position: relative;
+    transition: .5s ease;
+}
+
+.main-menu__item::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -9px;
+    height: 3px;
+    width: 0;
+    background-color: #F47676;
+    transition: .5s ease;
+}
+
+.main-menu__item:hover::before {
+    width: 100%;
+}
+
+.main-menu__item::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 0;
+    width: 100%;
+    background-color: #F47676;
+    transition: .4s ease;
+    z-index: -1;
+}
+
+
 
 .main-menu__line{
     top: 2.5rem;
@@ -340,15 +375,47 @@ body{
     align-items: center;
     width: 7.125rem;
     padding: 0.75rem 1rem;
-    justify-content: space-between;
-    align-items: center;
     flex-shrink: 0;
     border-radius: 1rem;
     border: 1px solid #343434;
     background: transparent;
-    color: #000;
+    color: #343434;
     cursor: pointer;
+    transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+  overflow: hidden;
 }
+
+.quantity-cart2::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  width: 50px;
+  height: 50px;
+  border-radius: inherit;
+  scale: 0;
+  z-index: -1;
+  background-color: #2F4F3C;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.quantity-cart2:hover::before {
+  scale: 3;
+}
+
+.quantity-cart2:hover {
+  color: #FFF;
+  border: #2F4F3C;
+  box-shadow: 0 0px 20px #343434;
+  scale: 1.1;
+  
+}
+
+.quantity-cart2:active {
+  scale: 1;
+}
+
+
 
 /* CARDS */
 .card-layout {
@@ -475,18 +542,26 @@ body{
     font-weight: 700;
     padding: 0.75rem;
 }
+  .quantity-cart:hover {
+    box-shadow: 0 0px 20px #343434;
+    scale: 1.1;
+    
+  }
+  
+  .quantity-cart:active {
+    scale: 1;
+  }
 
 .card-layout, .card-layout__item{
     transition: 400ms;
 }
 
 .card-layout .card-layout__item:hover {
-    transform: scale(1.05);
+    transform: scale(1.05, 1.05);
   }
   
 .card-layout:hover > .card-layout__item:not(:hover) {
-    filter: blur(1px);
-    transform: scale(0.95);
+    transform: scale(0.95, 0.95);
 }
 
 /* FOOTER */
@@ -517,22 +592,3 @@ body{
     font-weight: 800;
 }
 
-/* ADAPTATION */
-@media (min-width: 2000px){
-    .main-back__left, .main-back__right{
-        display: block;
-    }
-}
-
-
-@media (max-width: 1680px){
- .right-1, .right-2, .right-3{
-    margin-left: 85rem;
- }
-}
-
-@media (max-width: 1480px){
-    .right-1, .right-2, .right-3{
-       margin-left: 65rem;
-    }
-   }
