--- a/css/media.css
+++ b/css/media.css
@@ -241,4 +241,9 @@
     .main-menu__list{
         gap: 1rem;
     }
+
+    .main-title{
+        font-size: 2.5rem;
+        width: 20rem;
+    }
 }
