--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@ html{
     box-sizing: border-box;
     max-height: 100%;
     min-height: 100vh;
-    overflow-x: hidden;
 }
 
 *, *::after, *::before{
@@ -30,6 +29,7 @@ h1{
 }
 html, body{
     height: 100%;
+    
     scroll-behavior: smooth;
 }
 
@@ -41,12 +41,14 @@ body{
     font-weight: 600;
     line-height: normal;
     letter-spacing: 0.0225rem;
+    
 }
 
 .wrapper{
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden
 }
 
 .header{
@@ -56,6 +58,7 @@ body{
     position: sticky;
     top: -1em;
     z-index: 2;
+    
 }
 
 .container{
@@ -64,12 +67,14 @@ body{
     justify-content: center;
     align-items: center;
     height: 7.125rem;
+    
 }
 .container-f{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 .header-inner{
