--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Orelega+One&display=swap');
 
+@layer base {   html {     -webkit-tap-highlight-color: transparent;   } }
+
 html{
     box-sizing: border-box;
     max-height: 100%;
@@ -29,6 +31,7 @@ h1{
 }
 html, body{
     height: 100%;
+    
     scroll-behavior: smooth;
 }
 
@@ -40,6 +43,7 @@ body{
     font-weight: 600;
     line-height: normal;
     letter-spacing: 0.0225rem;
+    
 }
 
 .wrapper{
@@ -56,6 +60,7 @@ body{
     position: sticky;
     top: -1em;
     z-index: 2;
+    
 }
 
 .container{
@@ -64,13 +69,14 @@ body{
     justify-content: center;
     align-items: center;
     height: 7.125rem;
+    
 }
-
 .container-f{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 .header-inner{
@@ -83,7 +89,6 @@ body{
 .menu__btn{
     display: none;
 }
-
 .shopping-cart{
     display: none;
 }
@@ -137,6 +142,7 @@ body{
     display: inline-flex;
     align-items: flex-start;
     gap: 2.75rem;
+
 }
 
 .main{
@@ -188,6 +194,7 @@ body{
     transform: rotate(-4.387deg);
     top: 130.38vh;
     right: -50vh;
+    
 }
 .right-2{
     width: 40rem;
@@ -201,6 +208,7 @@ body{
     top: 350.44vh;
     right: -20vh;
 }
+
 
 .main-screen{
     margin: 0 10.5rem;
@@ -288,6 +296,8 @@ body{
     z-index: -1;
 }
 
+
+
 .main-menu__line{
     top: 2.5rem;
 }
@@ -331,6 +341,7 @@ body{
 .cart-trash{
     cursor: pointer;
 }
+
 .cart-trash__item{
     display: flex;
     flex-direction: row;
@@ -343,14 +354,12 @@ body{
     margin-bottom: 0.5rem;
     margin-left: 1rem;
 }
-
 .cart-item__price{
     color: #2F4F3C;
     font-size: 1rem;    
     font-weight: 400;
     margin-left: 2.5rem;
 }
-
 .vector{
     margin: 1.25rem 0;
 }
@@ -359,11 +368,9 @@ body{
     display: flex;
     justify-content: space-between;
 }
-
 .score__total-title{
     color: #2F4F3C;
 }
-
 .score__total{
     color: #2F4F3C;
     font-weight: 400;
@@ -423,6 +430,7 @@ body{
   border: #2F4F3C;
   box-shadow: 0 0px 20px #343434;
   scale: 1.1;
+  
 }
 
 .quantity-cart2:active {
@@ -528,7 +536,6 @@ body{
     flex-direction: row;
     gap: 1.25rem;
 }
-
 .quantity{
     display: flex;
     width: 7.125rem;
@@ -558,13 +565,15 @@ body{
     font-weight: 700;
     padding: 0.75rem;
 }
-.quantity-cart:hover {
+  .quantity-cart:hover {
     box-shadow: 0 0px 20px #343434;
     scale: 1.1;
-}
-.quantity-cart:active {
+    
+  }
+  
+  .quantity-cart:active {
     scale: 1;
-}
+  }
 
 .card-layout, .card-layout__item{
     transition: 400ms;
@@ -577,8 +586,6 @@ body{
 .card-layout:hover > .card-layout__item:not(:hover) {
     transform: scale(0.95, 0.95);
 }
-
-
 
 /* FOOTER */
 .footer{
@@ -620,15 +627,18 @@ body{
   border: none;
   z-index: 2;
   display: none;
+
 }
 .menu__btn:hover{
   background-color: transparent;
   padding: 0;
   border: none;
 }
+
 .menu__btn span{
   height: 3px;
   background-color: #2F4F3C;
   border-radius: 1rem;
   width: 100%;
 }
+
