--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ body{
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden
+    overflow-x: hidden;
 }
 
 .header{
